Refactor using CE mapping